build: :construction_worker: Docker initialisation

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "ENV=dev node --watch index.js"
+    "dev": "ENV=dev node --watch index.js",
+    "docker:image": "docker build -t o-last-back .",
+    "docker:run": "docker run -p 3000:3000 o-last-back"
   },
   "keywords": [],
   "author": "",
