--- a/sqitch.conf
+++ b/sqitch.conf
@@ -1,8 +1,9 @@
+
 [core]
 	engine = pg
 	top_dir = ./app/migrations
 	# plan_file = migrations/sqitch.plan
 [engine "pg"]
-	target = db:pg://postgres:postgres/localhost:5433/o-last
+	target = db:pg:olast
 	# registry = sqitch
 	# client = psql
