feat: :sparkles: post routes
post routes, /posts /posts/id, /posts/user/id, delete /posts/id

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -3,6 +3,6 @@
 	top_dir = ./app/migrations
 	# plan_file = migrations/sqitch.plan
 [engine "pg"]
-	target = db:pg://postgres:postgres/localhost:5433/o-last
+	target = db:pg://localhost:5433/olast
 	# registry = sqitch
 	# client = psql
