--- a/sqitch.template.conf
+++ b/sqitch.template.conf
@@ -3,6 +3,6 @@
 	top_dir = ./app/migrations
 	# plan_file = migrations/sqitch.plan
 [engine "pg"]
-	target = db:pg:o-last
+	target = db:pg:olast
 	# registry = sqitch
 	# client = psql
