--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "db:seeding:jb": "psql -p 5433 -f ./app/data/seeding.sql",
     "db:seeding:al": "psql -U spedata -d olast -f ./app/data/seeding.sql",
     "docker:image": "docker build -t o-last-back .",
-    "docker:run": "docker run -p 3000:3000 o-last-back"
+    "docker:run": "docker run -p 3000:3000 o-last-back",
+    "test": "NODE_ENV=test NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" npx jest"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,8 @@
   "devDependencies": {
     "@eslint/js": "^9.5.0",
     "eslint": "^9.5.0",
-    "globals": "^15.6.0"
+    "globals": "^15.6.0",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
