--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 PORT=3000
 PG_URL=postgres://user:password@localhost:5432/dbname
+PG_USER=test
+PG_PASSWORD=test
+PG_HOST=test
+PG_PORT=5432
+PG_DATABASE=test
+TOKEN_SECRET=edaefeageage23vqd
+SITE_URL=http://localhost:5173
+EMAIL=emailtest@test.com
+EMAIL_PASSWORD=htehzetjetyjetjtrrjd
